--- a/internal/generator/templates/enum.go.tmpl
+++ b/internal/generator/templates/enum.go.tmpl
@@ -72,7 +72,7 @@ func (v {{ $enum.Name }}) String() string {
     return fmt.Sprintf("unknown<%v>", v)
 }
 
-{{ if $options.EmitSqlSupport }}
+{{ if $options.EmitSQLSupport }}
 // Value implements database.sql.driver.Valuer
 func (v {{ $enum.Name}}) Value() (driver.Value, error) {
         return v.String(), nil
