Fix an inifite loop in enum String
When an enum has an unknown value String() returns a string with
the underlying value. Unfortunately this could trigger infinite
recusion.

--- a/internal/generator/templates/enum.go.tmpl
+++ b/internal/generator/templates/enum.go.tmpl
@@ -69,7 +69,7 @@ func (v {{ $enum.Name }}) String() string {
     if name, found := _{{ $enum.Name }}Name[v]; found {
         return name
     }
-    return fmt.Sprintf("unknown<%v>", v)
+    return fmt.Sprintf("unknown(%v)", {{ goType $scope $enum.Type }}(v))
 }
 
 {{ if $options.EmitSQLSupport }}
