Add an SignedBitField Array Traits Variant
- This new array traits is needed to be able to handle negative
  values in bitfields with 64 bit size.
- The new SignedBitFieldArrayTraits are used to represent integer
  types with variable width, such as int<(13>.
- Since for example in situations where the zserio type is int<13>,
  the raw data will only be 13 bits wide, but in Go we use an uint64,
  to be able to store up to 64 possible bits.
- That means that negative numbers, will not have their sign bit
  at the 64th position, but at bit position 13. Therefore, for signed
  types, we need to check if the number is negative, and if yes,
  fill all bits from 13 to 64 with 1 to make it a negative 64-bit number.

--- a/internal/generator/templates/instantiate_array_traits.go.tmpl
+++ b/internal/generator/templates/instantiate_array_traits.go.tmpl
@@ -2,7 +2,7 @@
 {{- $type := .type }}
 {{- $traits := goArrayTraits $scope $type }}
 {{- template "array_traits_type.go.tmpl" dict "pkg" $scope "type" $type }} {
-{{- if eq $traits "ztype.BitFieldArrayTraits" -}}
+{{- if or (eq $traits "ztype.BitFieldArrayTraits") (eq $traits "ztype.SignedBitFieldArrayTraits") -}}
     NumBits: uint8(
     {{- if gt $type.Bits 0 }}
         {{- $type.Bits }}
