--- a/internal/generator/templates/array_traits_type.go.tmpl
+++ b/internal/generator/templates/array_traits_type.go.tmpl
@@ -3,4 +3,5 @@
 {{- $traits := goArrayTraits $scope $type }}
 {{- $traits }}
 {{- if eq $traits "ztype.BitFieldArrayTraits" }}[{{ goType $scope $type }}]{{- end -}}
+{{- if eq $traits "ztype.SignedBitFieldArrayTraits" }}[{{ goType $scope $type }}]{{- end -}}
 {{- if eq $traits "ztype.ObjectArrayTraits" }}[*{{ goType $scope $type }}]{{- end -}}
