--- a/internal/generator/templates/array_init.go.tmpl
+++ b/internal/generator/templates/array_init.go.tmpl
@@ -16,5 +16,18 @@
     {{ $field.Name }}ArrayProperties.IsAuto = true
 {{- end }}
 {{- if eq $traits "ztype.ObjectArrayTraits" }}
-    {{ $field.Name }}ArrayProperties.ArrayTraits.DefaultObject = new({{ goType $scope $native.Type }})
+    {{- $requireIndexedInit := hasIndexOperators $field.Type }}
+    {{ $field.Name }}ArrayProperties.ArrayTraits.ObjectCreator = ztype.ObjectCreator[*{{ goType $scope $native.Type }}] {
+    {{- if $requireIndexedInit }}
+        UsesIndexOperator: true,
+        DefaultObjects: []*{{ goType $scope $native.Type }}{},
+    {{- else }}
+        DefaultObject: new({{ goType $scope $native.Type }}),
+    {{- end }}
+    }
+    {{- if $requireIndexedInit }}
+    for index := 0; index < {{ $field.Name }}ArrayProperties.FixedSize; index++ {
+        {{ $field.Name }}ArrayProperties.ArrayTraits.ObjectCreator.DefaultObjects = append({{ $field.Name }}ArrayProperties.ArrayTraits.ObjectCreator.DefaultObjects, new({{ goType $scope $native.Type }}))
+    }
+    {{- end }}
 {{- end }}
