--- a/internal/generator/templates/packing_context_encode.go.tmpl
+++ b/internal/generator/templates/packing_context_encode.go.tmpl
@@ -54,7 +54,7 @@
         {{ $field.Name }}ArrayProperties.IsPacked = true
     {{- end }}
     {{- if $native.IsMarshaler }}
-        for index, _ := range {{ $field_name }} {
+        for index := range {{ $field_name }} {
             {{ $field.Name }}ArrayProperties.RawArray = append({{ $field.Name }}ArrayProperties.RawArray, {{if $native.RequiresCast }}(*{{ goType $scope $native.Type }})(&{{ $field_name }}[index]){{ else }}&{{ $field_name }}[index]{{ end }})
         }
     {{- else if $native.RequiresCast }}
