--- a/internal/generator/templates/decode.go.tmpl
+++ b/internal/generator/templates/decode.go.tmpl
@@ -69,6 +69,7 @@
             {{- if $native.IsMarshaler }}
                 {{- $element = "*elem" }}
             {{- end }}
+            {{ $assign_str_lvalue }} = make([]{{ goType $scope $field.Type }}, 0, len({{ $field.Name }}ArrayProperties.RawArray))
             for _, elem := range {{ $field.Name }}ArrayProperties.RawArray {
                 {{ $assign_str_lvalue }} = append({{ $assign_str_lvalue }}, {{ if $native.RequiresCast }}{{ goType $scope $field.Type }}({{ $element }}){{ else }}{{ $element }}{{ end }})
             }
